<package>
  <name>sr_external_dependencies</name>
  <version>1.2.0</version>
  <description>sr_external_dependencies package is a "dummy" package used to synchronize the includes for the protocol communication between the host and the PIC for Shadow's EtherCAT hardware. It contains a script that automatically downloads the latest h file from our pic32 svn.</description>
  <maintainer email=" ugo@shadowrobot.com">Ugo Cupcic</maintainer>
  <maintainer email="">software@shadowrobot.com</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_external_dependencies</url>
  <!-- <url type="bugtracker"></url> -->

  <author email=" ugo@shadowrobot.com">Ugo Cupcic</author>
  <author>software@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>