<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_robot_lib</name>
  <version>1.4.0</version>
  <description>sr_robot_lib contains the robot library used in the sr_edc_ethercat_drivers. The
    library is used to store the incoming etherCAT messages in an easy to access format,
    and prepare the messages to be send through etherCAT.
  </description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_robot_lib</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>


  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sr_interpolation</build_depend>
  <build_depend>sr_utilities</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>sr_mechanism_model</build_depend>
  <build_depend>sr_external_dependencies</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tinyxml2</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_interpolation</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>sr_mechanism_model</run_depend>
  <run_depend>sr_external_dependencies</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>sr_edc_launch</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>gtest</test_depend>

</package>
