<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
  <name>sr_tactile_sensor_controller</name>
  <version>0.0.1</version>
  <description>The sr_tactile_sensor_controller package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sr_ros_controllers</url>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sr_robot_lib</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sr_robot_lib</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>sr_hardware_interface</run_depend>


  <export>
    <controller_interface plugin="${prefix}/sr_tactile_sensor_plugin.xml"/>
  </export>
</package>
